fixing alignment of untappd icon and very minor copy editing :|

--- a/styles/sistersbrewery.scss
+++ b/styles/sistersbrewery.scss
@@ -240,6 +240,9 @@ p {
       }
       &.untappd {
         padding: 10px;
+        img{
+          margin-top: -6px;
+        }
       }
     }
   }
